Updated HTML templates with new content for predict

--- a/templates/index.html
+++ b/templates/index.html
@@ -108,18 +108,18 @@
 
     <div class="mainPageHeader">
         <div class="mr437logo">
-            <a href="https://github.com/DJDarkCyber" target="_blank">
+            
                 <img src="{{ url_for('static', filename='imgs/mr437logo.jpeg') }}" alt="Logo" style="width: 120px;">
-            </a>
+            
         </div>
         <div class="mainPageHeaderCont">
             <a href="{{ url_for('indexPage') }}">
                 <div class="headerLetCont">Home</div>
             </a>
-            <a href="https://github.com/DJDarkCyber" target="_blank">
+            <a href="https://github.com/subhasmita223" target="_blank">
                 <div class="headerLetCont">GitHub</div>
             </a>
-            <a href="https://github.com/DJDarkCyber" target="_blank">
+            <a href="https://github.com/subhasmita223" target="_blank">
                 <div class="headerLetCont">About Us</div>
             </a>
         </div>
