--- a/templates/predictedWinner.html
+++ b/templates/predictedWinner.html
@@ -41,11 +41,7 @@
     <body>
         
         <div class="mainPageHeader">
-            <div class="mr437logo">
-                <a href="https://github.com/DJDarkCyber" target="_blank" rel="noopener noreferrer" >
-                    <img src="{{ url_for('static', filename='imgs/mr437logo.png') }}" alt="" style="width: 220px; height: 200px;">
-                </a>
-            </div>
+            
             <div class="mainPageHeaderCont">
             <a href="{{ url_for('indexPage') }}">
                 <div class="headerLetCont">
@@ -53,13 +49,13 @@
                 </div>
             </a>
             
-            <a href="https://github.com/DJDarkCyber" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/subhasmita223" target="_blank" rel="noopener noreferrer">
                 <div class="headerLetCont">
                     Github
                 </div>
             </a>
 
-            <a href="https://github.com/DJDarkCyber" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/subhasmita223" target="_blank" rel="noopener noreferrer">
                 <div class="headerLetCont">
                     About Us
                 </div>
